# git-sentinel

./: AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
examples/: config.example.yaml
src/git_sentinel/: __init__.py  cli.py  config.py  git_ops.py  hooks.py  logging_config.py  models.py  scheduler.py  service.py
tests/: conftest.py  test_config.py  test_git_ops.py  test_hooks.py  test_scheduler.py  test_service.py
