[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "git-sentinel"
version = "0.1.0"
description = "Daemon-like Git repository automation driven by YAML configuration."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "OpenAI Codex" }]
dependencies = [
  "pydantic>=2.6,<3",
  "PyYAML>=6.0,<7",
]

[project.scripts]
git-sentinel = "git_sentinel.cli:main"

[project.optional-dependencies]
dev = [
  "black>=24.0",
  "mypy>=1.8",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.4",
  "types-PyYAML>=6.0",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
strict = true
packages = ["git_sentinel"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
